<resources>
    <string name="app_name">Bring2You</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_bottom_nav" translatable="false">BottomNav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="order">Order</string>
    <string name="maps">Maps</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="en" translatable="false">EN</string>
    <string name="sv" translatable="false">SV</string>
    <string name="signout">Signout</string>
    <string name="send">SEND</string>
    <string name="logout">Logout</string>
    <string name="swedish">Swedish</string>
    <string name="english">English</string>
    <string name="remember_me">Remember me</string>
    <string name="sender_id">Sender id</string>
    <string name="quit">Quit</string>
    <string name="app_creation">This app was created in 2018 by the A-Team @ ITHS</string>
    <string name="Find">Find</string>
    <string name="adress">Adress</string>
    <string name="name">Name</string>
    <string name="postal_code_Placer">Postal code:</string>
    <string name="postal_code_placer">Postal code:</string>
    <string name="search">Search</string>
    <string name="clear">CLEAR</string>
    <string name="deliveries">DELIVERIES</string>
    <string name="infoPostalcode">Postal code: </string>
    <string name="infoAddress">Address: </string>
    <string name="infoSignedBy">Signed by: </string>
    <string name="infoName">Name: </string>
    <string name="infoDate">Date: </string>
    <string name="infoTime">Time: </string>
    <string name="titleDelivered">Delivered</string>
    <string name="titleNonDelivered">Non delivered</string>
    <string name="titleSettings">Settings</string>
    <string name="titleCreateDelivery">Create delivery</string>
    <string name="titleSign">Sign</string>
    <string name="titleInfo">Info</string>
    <string name="non_delivered">Non Delivered</string>
    <string name="delivered">Delivered</string>
    <string name="successDelivered">Successfully delivered!</string>
    <string name="deliveryFailed">Delivery failed!</string>

    <string name="find">Find</string>
    <string name="enter_a_location">Enter a location</string>
    <string name="logged_in_as">Logged in as:</string>
    <string name="no_blank_fields">No blank fields!</string>
    <string name="login_success">Successfully logged in as:</string>
    <string name="login_failed">Failed to login</string>
    <string name="signing_out">Signing out...</string>
    <string name="destination" translatable="false">Destination</string>
    <string name="dest_not_found">The destination was not found</string>
    <string name="ready_to_map">Ready to map!</string>
    <string name="permission_granted_camera">Permission granted, you can now access the camera</string>
    <string name="permission_denied_camera">Permission denied, you can not access the camera</string>
    <string name="both_permissions">You need to allow access to both permissions</string>
    <string name="Ok" translatable="false">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="delivery_added">Successfully added new delivery!</string>
    <string name="delivery_error">Error adding new delivery...</string>
    <string name="user_doesnt_exist">User does not exist!</string>
    <string name="lang_set_EN">Language is now set to English!</string>
    <string name="lang_set_SV">Language is now set to Swedish!</string>
    <string name="already_EN">Language is already set to English!</string>
    <string name="already_SV">Language is already set to Swedish!</string>
    <string name="printed_name">Printed name</string>
    <string name="alreadyDelivered">This delivery is already delivered!</string>
    <string name="idNotExist">This id does not exist on this route!</string>
    <string name="address">Address</string>

    <string name="IdNotExist">This ID does not exist on this route!</string>
    <string name="infoSender_id">order id:</string>
</resources>
