<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_assignment"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/order" />

    <item
        android:id="@+id/nav_add"
        android:icon="@drawable/ic_add_circle_black_24dp"
        android:title="@string/add" />


    <item
        android:id="@+id/nav_maps"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/maps" />


    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_applications_black_24dp"
        android:title="@string/settings" />

    <item
        android:icon="@drawable/ic_adjust_black_24dp"
        android:id="@+id/nav_logout"
        android:title="@string/logout"/>

</menu>